--- a/src/styles.css
+++ b/src/styles.css
@@ -3,4 +3,9 @@
   padding: 0;
   box-sizing: border-box;
   background-color: #111;
+  color: whitesmoke;
+  font-family: "Segoe UI";
+}
+a {
+  text-decoration: none;
 }
